--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "~4.16.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
